<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.nicklheureux.wifiaccessapp.MainActivity">

    <TextView
    android:id= "@+id/target_label"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/daily_mins"
    android:layout_centerHorizontal="true"
    android:textSize="20sp"
    android:layout_marginBottom="12dp"/>

    <EditText
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:id= "@+id/walking_entry"
        android:hint="@string/minutes"
        android:layout_width="300px"
        android:layout_below="@id/target_label"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"/>
    <EditText
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:id= "@+id/biking_entry"
        android:hint="@string/minutes"
        android:layout_width="300px"
        android:layout_height="wrap_content"
        android:layout_below="@id/walking_entry"
        android:inputType="numberDecimal"/>
    <EditText
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:id= "@+id/running_entry"
        android:hint="@string/minutes"
        android:layout_width="300px"
        android:layout_alignEnd="@id/biking_entry"
        android:layout_below="@id/biking_entry"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"/>
    <TextView
        android:id= "@+id/walking_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/target_label"
        android:text="@string/enter_walking"
        android:textSize="20sp"/>
    <TextView
        android:id= "@+id/biking_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/walking_entry"
        android:text="@string/enter_biking"
        android:textSize="20sp"/>
    <TextView
        android:id= "@+id/running_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/biking_entry"
        android:text="@string/enter_running"
        android:textSize="20sp"/>
    <Button android:id="@+id/calc_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate_caloires"
        android:layout_below="@id/running_entry"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="calculate"/>

</RelativeLayout>
